[package]
name = "csr-wasm"
version = "0.1.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"

wee_alloc = "0.4"
csr = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
